--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
-
 services:
   nodeapp:
     build: .
     ports:
-      - "3003:3003"
-    volumes:
-      - .:/usr/src/mc_app
+      - "3003:3001"        # host:container (container listens on 3001)
     working_dir: /usr/src/mc_app
     command: npm start
     environment:
       - NODE_ENV=development
+
